--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@
 	max-width:100%;
 	font-size:23px;
 	text-shadow: 2px 2px 4px black;
-	line-height:26px;
+	line-height:30px;
 	font-weight:bold;
 	color:white;
 	padding:12px 15px;
@@ -498,7 +498,7 @@ footer{
 	top:100%;
 	left:0;
 	right:0;
-	background-color:white;
+	background-color:rgba(255,255,255,0.90);
 	z-index:100;
 	width:100%;
 	overflow:hidden;
@@ -507,14 +507,17 @@ footer{
 	}
 
 
-	.navbar ul li a{
+	.navbar ul a{
 		padding-left:35%;
 		padding-right:40%;
 		text-align:center;
 		display:block;
 		margin:0;
+		color:black;
 
 	}
+
+
 
 	
 	
@@ -534,10 +537,8 @@ footer{
 	.navbar li i{
 		margin: 0px 0px 0px 5px;
 		right:1%;
-
+	
 	}
-
-
 
 
 	.logo img{
