--- a/style.css
+++ b/style.css
@@ -297,8 +297,8 @@
 .review{
 
 	margin:5% 5% 5% 5%;
-	box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.50),
-	2px 10px 16px rgba(0, 0, 0, 0.90),
+	box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.9),
+	2px 10px 16px rgba(0, 0, 0, 0.50),
 	1px 15px 30px rgba(0,0,0, 0.100);
 	width:auto;
 	background-color:darkblue;
@@ -328,9 +328,8 @@
 	height:40%;
 	font-size:20px;
 	padding:12px 15px;
-	box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.50),
-	2px 10px 16px rgba(0, 0, 0, 0.90),
-	1px 15px 30px rgba(0,0,0, 0.100);
+	box-shadow: 4px 8px 15px rgba(0, 0, 0, 0.9);
+	
 }
 
 .card p{
